--- a/2016_r.ipynb
+++ b/2016_r.ipynb
@@ -567,6 +567,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(digest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "digest::digest(object = paste0(\"abc\", 3231929), algo=\"md5\", serialize=F) %>% startsWith('00000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_hash <- function(x) {\n",
+    "    pwd = \"\"\n",
+    "    for(i in 9999:.Machine$integer.max) {\n",
+    "        y <- digest::digest(object = paste0(x, i), algo=\"md5\", serialize=F) \n",
+    "        cat(paste0(\"i\", i))\n",
+    "        if(y %>% startsWith('00000')) {\n",
+    "            pwd = paste0(pwd, substr(y, 6,6))\n",
+    "            cat(pwd)\n",
+    "            if(length(pwd) == 8) {\n",
+    "                return(pwd)\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_hash(\"ugkcyxxp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
