add day 5 boilerplate, day 4 python

--- a/2017_4_r.ipynb
+++ b/2017_4_r.ipynb
@@ -15,12 +15,12 @@
    },
    "outputs": [],
    "source": [
-    "txt = read.csv('input/day4.txt', header=F)"
+    "txt = readr::read_lines('input/day4.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,13 +148,15 @@
     }
    ],
    "source": [
-    "sum(unlist(purrr::map(txt$V1, check)))"
+    "sum(unlist(purrr::map(txt, check)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sort_letters <- function(x) {\n",
@@ -163,9 +165,6 @@
     "\n",
     "check2 <- function(x) {\n",
     "    splits = stringr::str_split(x, \" \")[[1]]\n",
-    "    if(any(duplicated(splits))) {\n",
-    "        return(FALSE)\n",
-    "    }\n",
     "    sorted <- map(splits, sort_letters)\n",
     "    return(!any(duplicated(unlist(sorted))) * 1)\n",
     "}"
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,8 +293,17 @@
     }
    ],
    "source": [
-    "sum(unlist(purrr::map(txt$V1, check2)))"
+    "sum(unlist(purrr::map(txt, check2)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
