ugh maybe i should just use python

--- a/2017_py.ipynb
+++ b/2017_py.ipynb
@@ -246,7 +246,7 @@
     "def read_input(day):\n",
     "    target = f'input/day{day}.txt'\n",
     "    with open(target) as f:\n",
-    "        return f.read().strip()"
+    "        return f.readlines()"
    ]
   },
   {
@@ -1005,6 +1005,84 @@
    ],
    "source": [
     "sum(no_anagrams(x) for x in in4.split(\"\\n\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Day 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in5 = read_input(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in5 = [int(line.strip()) for line in in5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25558839\n"
+     ]
+    }
+   ],
+   "source": [
+    "in5 = read_input(5)\n",
+    "in5 = [int(line.strip()) for line in in5]\n",
+    "i = 0\n",
+    "n = 0\n",
+    "while i < len(in5):\n",
+    "    temp = in5[i]\n",
+    "    if in5[i] >= 3:\n",
+    "        in5[i] -= 1\n",
+    "    else:\n",
+    "        in5[i] += 1\n",
+    "        \n",
+    "    i += temp\n",
+    "    n += 1\n",
+    "\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25558839"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
    ]
   },
   {
